tests/ui/parser/doc-comment-in-stmt.stderr
error: expected one of `.`, `;`, `?`, `}`, or an operator, found doc comment `//!self.allow_ty_infer()`
  --> $DIR/doc-comment-in-stmt.rs:5:5
   |
LL |     false
   |          - expected one of `.`, `;`, `?`, `}`, or an operator
LL |     //!self.allow_ty_infer()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ unexpected token
   |
help: add a space before `!` to write a regular comment
   |
LL |     // !self.allow_ty_infer()
   |       +

error: expected one of `.`, `;`, `?`, `}`, or an operator, found doc comment `/*! bar */`
  --> $DIR/doc-comment-in-stmt.rs:11:5
   |
LL |     false
   |          - expected one of `.`, `;`, `?`, `}`, or an operator
LL |     /*! bar */
   |     ^^^^^^^^^^ unexpected token
   |
help: add a space before `!` to write a regular comment
   |
LL |     /* ! bar */
   |       +

error: expected one of `.`, `;`, `?`, `}`, or an operator, found doc comment `/** baz */`
  --> $DIR/doc-comment-in-stmt.rs:15:7
   |
LL |     1 /** baz */
   |       ^^^^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator
   |
help: add a space before the last `*` to write a regular comment
   |
LL |     1 /* * baz */
   |         +

error: expected one of `.`, `;`, `?`, `}`, or an operator, found doc comment `/// quux`
  --> $DIR/doc-comment-in-stmt.rs:19:7
   |
LL |     2 /// quux
   |       ^^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator
   |
help: add a space before the last `/` to write a regular comment
   |
LL |     2 // / quux
   |         +

error: expected one of `.`, `;`, `?`, `else`, or an operator, found doc comment `//!foo
  --> $DIR/doc-comment-in-stmt.rs:25:22
   |
LL |     let y = x.max(1) //!foo
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected one of `.`, `;`, `?`, `else`, or an operator
   |
help: add a space before `!` to write a regular comment
   |
LL |     let y = x.max(1) // !foo
   |                        +

error: aborting due to 5 previous errors

